# poke-pocket-deck-agent

./: README.md  agent_pydantic.py  card_parser.py  deck_parser.py  energy_mappings.txt  get_metagame_lists.py  helpers.py  output.html  pyproject.toml  system_prompt.txt  todo.todo
deck-lists/: charizard_ex_moltres_ex.txt  gallade_ex_hitmonlee.txt  giratina_ex_darkrai_ex.txt
