[project]
name = "poke-pocket-deck-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.52",
    "requests>=2.32.3",
]
